# live-chat

./: .gitignore  README.md  pyproject.toml
demo/: alice.yaml  bob.yaml
demo/recordings/: two-agent-demo.m4a
docs/plans/: 2026-02-22-live-chat-agent-design.md  2026-02-22-live-chat-agent-plan.md  2026-02-28-voice-chat-design.md  2026-02-28-voice-chat-plan.md  2026-03-01-two-agent-demo-design.md  2026-03-01-two-agent-demo-plan.md
src/live_chat/: __init__.py  config.py  main.py  pipeline.py
src/live_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/live_chat/audio/: aec.py  gain.py  input.py  output.py  vad.py  wakeword.py
src/live_chat/llm/: cli_client.py  client.py  conversation.py  router.py
src/live_chat/stt/: whisper.py
src/live_chat/tts/: kokoro.py  piper_tts.py
tests/: test_aec.py  test_audio_input.py  test_audio_output.py  test_cli_client.py  test_config.py  test_conversation.py  test_e2e_voice.py  test_gain.py  test_integration.py  test_llm_client.py  test_pipeline.py  test_piper_tts.py  test_router.py  test_stt.py  test_tts.py  test_vad.py  test_wakeword.py
tests/fixtures/: hello_nice_to_meet_you.npy
