[project]
name = "live-chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5",
    "silero-vad>=5.1",
    "openwakeword>=0.6",
    "mlx-whisper>=0.4",
    "kokoro>=0.7",
    "anthropic>=0.42",
    "rich>=14.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
live-chat = "live_chat.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
